# autonomous-research-system

./: .dockerignore  .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  SUPPORT.md  compose.yaml  langgraph.json  pyproject.toml
.github/workflows/: ci.yml
.streamlit/: config.toml
docs/: README.md  architecture.md  demo.md  evaluation.md  extending.md  getting-started.md  operations.md  security.md  troubleshooting.md
docs/autonomous-research-system/: 2026-07-18-build-completion.md
docs/handoffs/: 2026-07-18-codex-autonomous-research-system.handoff.mdc
docs/superpowers/plans/: 2026-07-18-autonomous-research-system.md
scripts/: wait_for_http.py
src/research_system/: __init__.py  __main__.py  cli.py  config.py  engine.py  exceptions.py  exports.py  graph.py  llm.py  models.py  prompts.py  state.py  streamlit_app.py
src/research_system/agents/: __init__.py  common.py  critic.py  researcher.py  summarizer.py  supervisor.py  writer.py
src/research_system/api/: __init__.py  app.py  routes.py
src/research_system/data/: demo_sources.json
src/research_system/memory/: __init__.py  checkpoints.py  embeddings.py  vector.py  vector_store.py
src/research_system/persistence/: __init__.py  checkpoints.py  runs.py
src/research_system/tools/: __init__.py  arxiv.py  arxiv_search.py  base.py  demo.py  demo_search.py  pdf.py  pdf_parser.py  source_pipeline.py  sources.py  tavily.py  tavily_search.py
src/research_system/ui/: __init__.py  app.py  components.py  theme.py
tests/: conftest.py
tests/api/: test_api.py
tests/contract/: test_network_isolation.py  test_project_contract.py
tests/e2e/: test_streamlit_smoke.py
tests/eval/: golden_cases.json  test_research_quality.py
tests/integration/: test_checkpoints.py  test_engine.py  test_graph.py  test_run_repository.py  test_source_pipeline.py  test_vector_memory.py
tests/live/: test_live_providers.py
tests/ui/: test_app.py  test_components.py
tests/unit/: test_cli.py  test_config.py  test_embeddings.py  test_exports.py  test_llm.py  test_models.py  test_state.py
tests/unit/agents/: test_supervisor.py  test_workers.py
tests/unit/tools/: test_arxiv_search.py  test_pdf_parser.py  test_tavily_search.py
