[build-system]
requires = ["hatchling>=1.28"]
build-backend = "hatchling.build"

[project]
name = "autonomous-research-system"
version = "0.1.0"
description = "A source-grounded LangGraph research workspace with supervised specialist agents."
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = { file = "LICENSE" }
authors = [{ name = "Fortune Vieyra" }]
keywords = ["agents", "research", "langgraph", "langchain", "streamlit", "rag"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Framework :: FastAPI",
  "License :: OSI Approved :: GNU Affero General Public License v3",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "fastapi==0.139.2",
  "feedparser==6.0.12",
  "httpx==0.28.1",
  "langchain==1.3.14",
  "langchain-openai==1.3.5",
  "langgraph==1.2.9",
  "langgraph-checkpoint-sqlite==3.1.0",
  "pydantic==2.13.4",
  "pydantic-settings==2.14.2",
  "pymupdf==1.28.0",
  "python-dotenv>=1.2,<2",
  "python-multipart==0.0.32",
  "streamlit==1.59.2",
  "tavily-python==0.7.26",
  "tenacity>=9.1,<10",
  "typer>=0.24,<1",
  "uvicorn[standard]==0.51.0",
]

[project.optional-dependencies]
e2e = [
  "playwright>=1.55,<2",
  "pytest-playwright>=0.7,<1",
]

[project.scripts]
research-desk = "research_system.cli:app"
research-desk-api = "research_system.api.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/research_system"]

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/tests",
  "/docs",
  "/README.md",
  "/LICENSE",
  "/pyproject.toml",
  "/langgraph.json",
]

[tool.uv]
default-groups = ["dev"]

[dependency-groups]
dev = [
  "bandit>=1.8,<2",
  "hypothesis>=6.140,<7",
  "httpx2>=2.7,<3",
  "mypy>=1.19,<2",
  "pip-audit>=2.9,<3",
  "playwright>=1.55,<2",
  "pytest==9.1.1",
  "pytest-asyncio==1.4.0",
  "pytest-cov>=7,<8",
  "pytest-playwright>=0.7,<1",
  "pytest-socket>=0.7,<1",
  "respx>=0.22,<1",
  "ruff>=0.15,<1",
]

[tool.pytest.ini_options]
addopts = "-ra --strict-config --strict-markers --disable-socket --allow-unix-socket -m 'not live and not e2e'"
testpaths = ["tests"]
markers = [
  "integration: exercises file-backed persistence or the complete graph",
  "live: makes explicitly opted-in provider calls",
  "ui: exercises the Streamlit presentation layer",
  "e2e: exercises a running app through Playwright",
]
filterwarnings = [
  # PyMuPDF 1.28's generated SWIG types emit these on Python 3.11 import/exit.
  "ignore:builtin type SwigPyPacked has no __module__ attribute:DeprecationWarning",
  "ignore:builtin type SwigPyObject has no __module__ attribute:DeprecationWarning",
  "ignore:builtin type swigvarlink has no __module__ attribute:DeprecationWarning",
]

[tool.coverage.run]
branch = true
source = ["research_system"]
omit = ["src/research_system/ui/app.py", "src/research_system/streamlit_app.py"]

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_covered = true
exclude_also = [
  "if TYPE_CHECKING:",
  "if __name__ == .__main__ .:",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ASYNC", "S", "RUF"]
ignore = ["S101"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S105", "S106", "S108"]
"scripts/**/*.py" = ["S603"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
plugins = ["pydantic.mypy"]
packages = ["research_system"]

[[tool.mypy.overrides]]
module = ["feedparser.*", "streamlit.*", "tavily.*"]
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]
